Version 0.1 - Not production ready => Dummy data - 03.07.2025